# ROVER

./: README.md
rover_firmware/: README.md  Rover.ioc
rover_firmware/Core/: SLAM_Rover.doxyfile
rover_firmware/Core/Inc/: FreeRTOSConfig.h  RoverConfig.h  stm32f4xx_it.h
rover_firmware/Core/Inc/Communication/: Raspberry.h
rover_firmware/Core/Inc/Control/: Control.h
rover_firmware/Core/Inc/Peripherals/: ADCConfig.h  DMAConfig.h  timersConfig.h
rover_firmware/Core/Inc/Sensors/: AckermannOdom.h  RoverStateSensors.h
rover_firmware/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c
rover_firmware/Core/SystemView/: portsPatch.txt
rover_ros/interface_ackermann/: CMakeLists.txt  package.xml
rover_ros/interface_ackermann/src/: interface_ackermann_node.cpp
rover_ros/rover_description/: CMakeLists.txt  package.xml
rover_ros/rover_description/launch/: config.rviz  rover_description.launch
rover_ros/rover_description/urdf/: macros.xacro  materials.xacro  rover.gazebo  rover.xacro  rover_FROM_ERLE.urdf  rover_kinematics.xacro  sensors.xacro
rover_ros/rover_gazebo/: CMakeLists.txt  package.xml
rover_ros/rover_gazebo/launch/: empty_world.launch
rover_ros/rover_gazebo/worlds/: barriers.world  empty.world  know_landmarks.world  test_world.world
rover_ros/rover_node/: CMakeLists.txt  package.xml
rover_ros/rover_node/config/: config.yaml
rover_ros/rover_node/src/: rover_node_exec.py  rover_node_odom.py
rover_ros/rover_supervisor/: CMakeLists.txt  package.xml
rover_ros/rover_supervisor/launch/: main.launch
(+30 files in other folders)
