<?xml version="1.0"?>
<package>
  <name>rover_gazebo</name>
  <version>0.1.0</version>
  <description>The rover_gazebo package</description>

  <maintainer email="anne-claire.berthet@akka.eu">anne-claire.berthet</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rover_control</run_depend>
  <run_depend>rover_description</run_depend>
  <run_depend>xacro</run_depend>

</package>
